--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Currency</title>
+    <link rel="stylesheet" href="popup.css" />
+    <script src="popup.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <div class="input-container">
+        <input type="text" />
+      </div>
+      <div class="currency-container">
+        <div>$25</div>
+        <div>$66</div>
+      </div>
+    </div>
+  </body>
 </html>
